[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameplay/components/Interfaces/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/components/Maps/Map.gd" type="Script" id=2]
[ext_resource path="res://gameplay/resources/images/backgrounds/BlueCheckerPatternPaper.png" type="Texture" id=3]
[ext_resource path="res://gameplay/components/MousePointer/MousePointer.tscn" type="PackedScene" id=4]

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 1 )]

[node name="BoundarySprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="BackgroundSprite" type="Sprite" parent="."]

[node name="MousePointer" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="MousePointer"]
current = true
limit_left = -920
limit_top = -517
limit_right = 920
limit_bottom = 517
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.75
drag_margin_top = 0.6
drag_margin_right = 0.75
drag_margin_bottom = 0.6
editor_draw_limits = true
editor_draw_drag_margin = true
